<resources>
    <string name="app_name">WanAndroidByJava</string>
    <string name="action_settings">Settings</string>
    <string name="str_home">首页</string>
    <string name="str_system">体系</string>
    <string name="str_public">公众号</string>
    <string name="str_project">项目</string>
    <string name="str_personal">我的</string>
    <string name="str_load_more">加载更多</string>
    <string name="str_new">新</string>
    <string name="str_mark_top">置顶</string>
    <string name="str_navigation">导航</string>
    <string name="str_no_more_data">没有更多数据了</string>
    <string name="str_load_fail_and_click">加载失败，请点击我重试</string>

    <string name="str_my_integral">我的积分</string>
    <string name="str_my_share">我的分享</string>
    <string name="str_my_collect">我的收藏</string>
    <string name="str_my_todo">我的TODO</string>
    <string name="str_about_developer">关于作者</string>
    <string name="str_my_setting">系统设置</string>
    <string name="str_search">搜索</string>
    <string name="str_cancel">取消</string>
    <string name="str_input_net_address">请输入网址</string>

    <string name="str_feature_not_open">功能尚未开放</string>
    <string name="str_no_data">数据为空</string>
    <string name="str_refresh_again">请刷新重试</string>
    <string name="str_net_error">网络异常</string>
    <string name="str_check_net_refresh_again">请检查网络连接刷新重试</string>
    <string name="str_data_loading">数据加载中</string>

    <string name="str_refresh_pulling">下拉刷新</string>
    <string name="str_refresh_release">释放刷新</string>
    <string name="str_data_loading_success">数据加载成功</string>
    <string name="str_data_loading_fail">数据加载失败</string>
    <string name="str_wan_android_provide">网页由 wanandroid.com 提供</string>
    <string name="str_return_home_page">回到首页</string>
    <string name="str_collect">收藏</string>
    <string name="str_bookmark">书签</string>
    <string name="str_refresh">刷新</string>
    <string name="str_share">分享</string>
    <string name="str_quit">退出</string>
    <string name="str_copy_link">复制链接</string>
    <string name="str_open_with_browser">浏览器打开</string>
    <string name="str_link_already_copy">链接已复制</string>
    <string name="str_link_copy_fail">链接复制失败，请重试</string>
    <string name="str_welcome_to_wan_android">欢迎来到WanAndroid的世界</string>
    <string name="str_wan_android">WanAndroid</string>
    <string name="str_sign_in">登录</string>
    <string name="str_register">注册</string>
    <string name="str_please_input_user_name">请输入用户名</string>
    <string name="str_please_input_user_password">请输入密码</string>
    <string name="str_please_confirm_user_password">请确认密码</string>
    <string name="str_independent_develop">本APP由Bear独立开发</string>
    <string name="str_go_to_login">去登陆</string>
    <string name="str_go_to_register">去注册</string>
    <string name="str_login_success">登录成功</string>
    <string name="str_register_success">注册成功</string>
    <string name="str_login_fail">登录失败</string>
    <string name="str_register_fail">注册失败</string>
    <string name="str_user_name_not_empty">用户名不能为空</string>
    <string name="str_password_not_empty">密码不能为空</string>
    <string name="str_re_password_not_empty">确认密码不能为空</string>
    <string name="str_net_error_to_try_again">网络异常，请检查重试</string>
    <string name="str_password_not_same_to_try_again">密码输入不一致，请重新输入</string>
    <string name="str_operation_failed_and_retry_again">操作失败，请重试</string>
    <string name="str_personal_id">ID: %d</string>
    <string name="str_personal_grade">等级: %d</string>
    <string name="str_personal_rank">排名: %s</string>
</resources>
