<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFFFFF"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mainViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <com.bear.wanandroidbyjava.Widget.ItemView
            android:id="@+id/homeTabItemView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_main_bottom_tab"
            app:iv_icon_res="@drawable/ic_home"
            app:iv_icon_size="@dimen/dp_22"
            app:iv_icon_tint="@color/color_03A9F4"
            app:iv_offset="@dimen/dp_3"
            app:iv_text_size="@dimen/dp_13"
            app:iv_text_str="@string/str_home" />

        <com.bear.wanandroidbyjava.Widget.ItemView
            android:id="@+id/systemTabItemView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_main_bottom_tab"
            app:iv_icon_res="@drawable/ic_system"
            app:iv_icon_size="@dimen/dp_22"
            app:iv_icon_tint="@color/color_5C5C5C"
            app:iv_offset="@dimen/dp_3"
            app:iv_text_size="@dimen/dp_13"
            app:iv_text_str="@string/str_system" />

        <com.bear.wanandroidbyjava.Widget.ItemView
            android:id="@+id/publicTabItemView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_main_bottom_tab"
            app:iv_icon_res="@drawable/ic_public"
            app:iv_icon_size="@dimen/dp_22"
            app:iv_icon_tint="@color/color_5C5C5C"
            app:iv_offset="@dimen/dp_3"
            app:iv_text_size="@dimen/dp_13"
            app:iv_text_str="@string/str_public" />

        <com.bear.wanandroidbyjava.Widget.ItemView
            android:id="@+id/projectTabItemView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_main_bottom_tab"
            app:iv_icon_res="@drawable/ic_project"
            app:iv_icon_size="@dimen/dp_22"
            app:iv_icon_tint="@color/color_5C5C5C"
            app:iv_offset="@dimen/dp_3"
            app:iv_text_size="@dimen/dp_13"
            app:iv_text_str="@string/str_project" />

        <com.bear.wanandroidbyjava.Widget.ItemView
            android:id="@+id/personalTabItemView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_main_bottom_tab"
            app:iv_icon_res="@drawable/ic_personal"
            app:iv_icon_size="@dimen/dp_22"
            app:iv_icon_tint="@color/color_5C5C5C"
            app:iv_offset="@dimen/dp_3"
            app:iv_text_size="@dimen/dp_13"
            app:iv_text_str="@string/str_personal" />
    </LinearLayout>
</LinearLayout>