<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_250"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/userBgIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_AAAAAA"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/userGradeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_20"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/dp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/userRankTv"
            tools:text="等级: 0" />

        <TextView
            android:id="@+id/userRankTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/dp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/userGradeTv"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="排名: 0" />

        <TextView
            android:id="@+id/userIdTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_5"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/dp_14"
            app:layout_constraintBottom_toTopOf="@+id/userGradeTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="ID: 0" />

        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_5"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/dp_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/userIdTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="midbearbeast" />

        <TextView
            android:id="@+id/goToLoginTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_5"
            android:text="@string/str_go_to_login"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/dp_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/userIdTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="midbearbeast" />

        <ImageView
            android:id="@+id/userAvatarIv"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/bg_personal_avatar"
            android:padding="@dimen/dp_20"
            app:layout_constraintBottom_toTopOf="@+id/userNameTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:src="@drawable/ic_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_my_integral"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_personal_integral"
            app:tint="@color/color_222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/str_my_integral"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/dp_15" />

        <TextView
            android:id="@+id/integralCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_personal_item_number"
            android:paddingHorizontal="@dimen/dp_4"
            android:textColor="@color/color_03A9F4"
            tools:text="1930" />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/ic_personal_arrow"
            app:tint="@color/color_222222" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_my_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_personal_share"
            app:tint="@color/color_222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/str_my_share"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/dp_15" />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/ic_personal_arrow"
            app:tint="@color/color_222222" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_my_collect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_personal_collect"
            app:tint="@color/color_222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/str_my_collect"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/dp_15" />

        <TextView
            android:id="@+id/collectCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_personal_item_number"
            android:paddingHorizontal="@dimen/dp_4"
            android:textColor="@color/color_03A9F4"
            tools:text="46" />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/ic_personal_arrow"
            app:tint="@color/color_222222" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_my_todo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_personal_todo"
            app:tint="@color/color_222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/str_my_todo"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/dp_15" />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/ic_personal_arrow"
            app:tint="@color/color_222222" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about_developer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_personal_about"
            app:tint="@color/color_222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/str_about_developer"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/dp_15" />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/ic_personal_arrow"
            app:tint="@color/color_222222" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_my_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_personal_setting"
            app:tint="@color/color_222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/str_my_setting"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/dp_15" />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/ic_personal_arrow"
            app:tint="@color/color_222222" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/logoutContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_personal_setting"
            app:tint="@color/color_222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/str_quit"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/dp_15" />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/ic_personal_arrow"
            app:tint="@color/color_222222" />
    </LinearLayout>
</LinearLayout>